[DMS-1] Creating dataframes

--- a/deepMSim.ipynb
+++ b/deepMSim.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import the required libraries"
+    "## Import the required libraries"
    ]
   },
   {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,19 +231,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Corpus Extraction\n",
-    "Extract the peptide sequence and ion sentence sequences from the dataset"
+    "## Corpus Extraction\n",
+    "Extract the peptide sequence and ion sentence sequences from the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MSP file parser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create empty lists to store temporary data\n",
     "seq = []\n",
     "X = []\n",
+    "Z = []\n",
+    "E = []\n",
     "\n",
     "# Parse the MSP file and get the immonium ion dataset\n",
     "def parseMSPfile(fname=None, dimm=None):\n",
@@ -254,10 +263,6 @@
     "            # Check for empty line for spectrum end and header start\n",
     "            if (line[0] == '\\r' or line[0] == '#' or line[0] == '\\n'):\n",
     "                header = False\n",
-    "                if not stnc:\n",
-    "                    # If no immonium ion produced, set the translation to empty sentence\n",
-    "                    dat = [' .']\n",
-    "\n",
     "                X.append(stnc[:])\n",
     "                stnc.clear()\n",
     "                continue\n",
@@ -271,6 +276,16 @@
     "                        # Take out the sequence\n",
     "                        nm, chg = val.split('/')\n",
     "                        seq.append(nm[1:])\n",
+    "                        # Take out the charge, nmods and eV (energy)\n",
+    "                        ch = chg.split('_')\n",
+    "\n",
+    "                        # Append the charge\n",
+    "                        Z.append(int(ch[0]))\n",
+    "                        \n",
+    "                        # Append the energy\n",
+    "                        #print(ch)\n",
+    "                        E.append(float(ch[-1][:-3]))\n",
+    "                        \n",
     "\n",
     "                    if key == 'Num peaks':\n",
     "                        header = True\n",
@@ -279,67 +294,229 @@
     "            else:\n",
     "                _, _, label = line.split('\\t')\n",
     "\n",
+    "                # Clip off the first and last \" \"\n",
     "                label = label[1:-1]\n",
     "\n",
-    "                lbls = re.findall(r\"(I[A-Z]+[+]*\\d*i*)\", label)\n",
+    "                # Extract label pattern\n",
+    "                lbls = re.findall(r\"(?<!\\/)(?<![A-Z])(I[A-Z][A-Z](?![A-Z]){2}[+]*\\d*i*)\", label)\n",
     "                lbls = list(map(lambda x: x[1:], lbls))\n",
     "\n",
     "                # If anything to append then append\n",
     "                if lbls:\n",
     "                    for lab in lbls:\n",
     "                        if lab not in dimm:\n",
-    "                            dimm.add(lab)\n",
+    "                            dimm.add(lab[0])\n",
     "                            #print ('Label Added:' + lab)\n",
     "                    #print(lbls)\n",
     "                    stnc.extend(lbls)\n",
     "\n",
     "    # For the last one\n",
-    "    if not stnc:\n",
-    "        # If no immonium ion produced, set the translation to empty sentence\n",
-    "        stnc = [' .']\n",
-    "\n",
     "    X.append(stnc[:])\n",
     "    stnc.clear()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Clear the lists\n",
+    "seq = []\n",
+    "X = []\n",
+    "Z = []\n",
+    "E = []\n",
+    "\n",
     "# Parse the MSP file and create a dataframe\n",
-    "_ = parseMSPfile(fname = msp_file, dimm = simm)\n",
-    "dataset = pd.DataFrame(list(zip(seq, X)), columns=['seq', 'ions'])"
+    "_ = parseMSPfile(fname = msp_file, dimm = simm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construct the two languages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variables\n",
+    "MAXZ = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 seq                                  ions\n",
-      "53550  YYWGGLYSWDMSK  [KD, WD, WE, YA, YA+i, WA, WA+i, WF]\n",
-      "53551  YYWGGLYSWDMSK        [KD, WD, WE, YA, YA+i, WA, WF]\n",
-      "53552  YYWGGLYSWDMSK    [WH, WH+i, WA, WA+i, WF, WF+i, KF]\n"
+      "                                  seq  z     E  \\\n",
+      "0           AAAAAAAAAAEEAAMQRDLLPPAGR  3  34.9   \n",
+      "1                          AAADDGEEPK  2  24.4   \n",
+      "2      AAAEEGCGVGVEDDRELEELLESALDDFDK  3  50.2   \n",
+      "3                      AAAEVNQEYGLDPK  2  31.0   \n",
+      "4                     AAAFEDQENETVVVK  2  38.7   \n",
+      "5                     AAAFEDQENETVVVK  2  40.1   \n",
+      "6                   AAAGELQEDSGLHVLAR  3  19.0   \n",
+      "7                      AAAITSDLLESLGR  2  29.0   \n",
+      "8                      AAAITSDLLESLGR  2  33.2   \n",
+      "9                      AAAITSDLLESLGR  2  44.0   \n",
+      "10                          AAALERMPR  2  21.2   \n",
+      "11                          AAATLMTER  2  22.6   \n",
+      "12              AAATQPDGKDTPDEPWAFPAR  3  34.3   \n",
+      "13  AACEQLHQQQQQQQEETTAATLLLQGEEEGEED  3  57.7   \n",
+      "14                            AACFQLK  2  19.6   \n",
+      "15                  AACLESAQEPAGAWSNK  2  41.9   \n",
+      "16                  AACLESAQEPAGAWSNK  2  43.5   \n",
+      "17                          AADAVEDLR  2  30.0   \n",
+      "19                           AADIPGLK  2  18.4   \n",
+      "20                 AADKDTCFSTEGPNLVTR  2  41.0   \n",
+      "\n",
+      "                                                 ions  \n",
+      "0                                          [RJ, RJ+i]  \n",
+      "1                      [PA, KC, DA, EA, EA+i, KD, KF]  \n",
+      "2                                                  []  \n",
+      "3                                                  []  \n",
+      "4                                  [FA, FA+i, KD, KF]  \n",
+      "5                        [FA, FA+i, QD, KD, KD+i, KF]  \n",
+      "6                                                [EA]  \n",
+      "7                                            [EA, RJ]  \n",
+      "8                                                [RJ]  \n",
+      "9                                                [RJ]  \n",
+      "10                                         [RJ, RJ+i]  \n",
+      "11                       [RC, LC, TA, LA, MA, RI, RJ]  \n",
+      "12                                       [WF, RJ, KF]  \n",
+      "13                                                 []  \n",
+      "14  [LC, LC+i, QC, KC, QC+i, KC+i, LA, LA+i, QA, K...  \n",
+      "15                               [QD, KD, WD, WA, KF]  \n",
+      "16                                       [KD, WA, KF]  \n",
+      "17                                               [RJ]  \n",
+      "19                       [PA, LC, IC, KC, LA, IA, KD]  \n",
+      "20                                       [KD, RJ, KF]  \n"
      ]
     }
    ],
    "source": [
+    "# Construct a dataframe\n",
+    "dataset = pd.DataFrame(list(zip(seq, Z, E, X)), columns=['seq', 'z', 'E', 'ions'])\n",
+    "\n",
+    "# Filter the dataset by the max charge \n",
+    "dataset = dataset[dataset['z'] <= MAXZ]\n",
+    "\n",
     "# Print a few entries to visualize\n",
-    "print(dataset[-3:])"
+    "print(dataset[:20])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A A A A A A A A A A E E A A M Q R D L L P P A G R .', 'A A A D D G E E P K .', 'A A A E E G C G V G V E D D R E L E E L L E S A L D D F D K .', 'A A A E V N Q E Y G L D P K .', 'A A A F E D Q E N E T V V V K .', 'A A A F E D Q E N E T V V V K .', 'A A A G E L Q E D S G L H V L A R .', 'A A A I T S D L L E S L G R .', 'A A A I T S D L L E S L G R .', 'A A A I T S D L L E S L G R .']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lang1 = list(map(lambda x: \" \".join(x) + ' .', dataset['seq']))\n",
+    "lang2 = list(map(lambda y: \" \".join(y) + ' .', dataset['ions']))\n",
+    "\n",
+    "# Clear the duplicate data\n",
+    "seq.clear()\n",
+    "X.clear()\n",
+    "Z.clear()\n",
+    "E.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Insert the languages back to the dataframe\n",
+    "dataset['seq'] = lang1\n",
+    "dataset['ions'] = lang2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Language Encoding\n",
+    "\n",
+    "Tokenize the sentences, construct tensors, embed the charge and eV information and do positional encoding (BERT)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                  seq  z     E  \\\n",
+      "0   A A A A A A A A A A E E A A M Q R D L L P P A ...  3  34.9   \n",
+      "1                               A A A D D G E E P K .  2  24.4   \n",
+      "2   A A A E E G C G V G V E D D R E L E E L L E S ...  3  50.2   \n",
+      "3                       A A A E V N Q E Y G L D P K .  2  31.0   \n",
+      "4                     A A A F E D Q E N E T V V V K .  2  38.7   \n",
+      "5                     A A A F E D Q E N E T V V V K .  2  40.1   \n",
+      "6                 A A A G E L Q E D S G L H V L A R .  3  19.0   \n",
+      "7                       A A A I T S D L L E S L G R .  2  29.0   \n",
+      "8                       A A A I T S D L L E S L G R .  2  33.2   \n",
+      "9                       A A A I T S D L L E S L G R .  2  44.0   \n",
+      "10                                A A A L E R M P R .  2  21.2   \n",
+      "11                                A A A T L M T E R .  2  22.6   \n",
+      "12        A A A T Q P D G K D T P D E P W A F P A R .  3  34.3   \n",
+      "13  A A C E Q L H Q Q Q Q Q Q Q E E T T A A T L L ...  3  57.7   \n",
+      "14                                    A A C F Q L K .  2  19.6   \n",
+      "15                A A C L E S A Q E P A G A W S N K .  2  41.9   \n",
+      "16                A A C L E S A Q E P A G A W S N K .  2  43.5   \n",
+      "17                                A A D A V E D L R .  2  30.0   \n",
+      "19                                  A A D I P G L K .  2  18.4   \n",
+      "20              A A D K D T C F S T E G P N L V T R .  2  41.0   \n",
+      "\n",
+      "                                                 ions  \n",
+      "0                                           RJ RJ+i .  \n",
+      "1                            PA KC DA EA EA+i KD KF .  \n",
+      "2                                                   .  \n",
+      "3                                                   .  \n",
+      "4                                     FA FA+i KD KF .  \n",
+      "5                             FA FA+i QD KD KD+i KF .  \n",
+      "6                                                EA .  \n",
+      "7                                             EA RJ .  \n",
+      "8                                                RJ .  \n",
+      "9                                                RJ .  \n",
+      "10                                          RJ RJ+i .  \n",
+      "11                             RC LC TA LA MA RI RJ .  \n",
+      "12                                         WF RJ KF .  \n",
+      "13                                                  .  \n",
+      "14  LC LC+i QC KC QC+i KC+i LA LA+i QA KA QA+i FA ...  \n",
+      "15                                   QD KD WD WA KF .  \n",
+      "16                                         KD WA KF .  \n",
+      "17                                               RJ .  \n",
+      "19                             PA LC IC KC LA IA KD .  \n",
+      "20                                         KD RJ KF .  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the head of dataset\n",
+    "print(dataset[:20])"
+   ]
   },
   {
    "cell_type": "code",
