[DMS-5] Bug fixing

--- a/deepMSim.ipynb
+++ b/deepMSim.ipynb
@@ -139,6 +139,7 @@
     "if species == 'HUMAN':\n",
     "    human_url = 'ftp://chemdata.nist.gov/download/peptide_library/libraries/cptaclib/2015/cptac2_human_hcd_itraq_selected_part1.msp.tar.gz'\n",
     "    human = 'cptac2_human_hcd_itraq_selected_part1.msp.tar.gz'\n",
+    "    msp_file = './speclib/cptac2_human_hcd_itraq_selected_part1.msp'\n",
     "\n",
     "    data_dir = os.path.expanduser(\"./speclib\")\n",
     "    if not os.path.isdir(data_dir):\n",
@@ -151,8 +152,7 @@
     "        # Extract the tar ball into MSP file and move into the speclib folder\n",
     "        !tar xvf 'cptac2_human_hcd_itraq_selected_part1.msp.tar.gz'\n",
     "        os.rename('./cptac2_human_hcd_itraq_selected_part1.msp', msp_file)\n",
-    "\n",
-    "    msp_file = './speclib/cptac2_human_hcd_itraq_selected_part1.msp'"
+    "\n"
    ]
   },
   {
@@ -165,6 +165,7 @@
     "if species == 'MOUSE':\n",
     "    mouse_url = 'ftp://chemdata.nist.gov/download/peptide_library/libraries/cptaclib/2015/cptac2_mouse_hcd_selected.msp.tar.gz'\n",
     "    mouse = 'cptac2_mouse_hcd_selected.msp.tar.gz'\n",
+    "    msp_file = './speclib/cptac2_mouse_hcd_selected.msp'\n",
     "\n",
     "    data_dir = os.path.expanduser(\"./speclib\")\n",
     "    if not os.path.isdir(data_dir):\n",
@@ -177,8 +178,7 @@
     "        # Extract the tar ball into MSP file and move into the speclib folder\n",
     "        !tar xvf 'cptac2_mouse_hcd_selected.msp.tar.gz'\n",
     "        os.rename('./cptac2_mouse_hcd_selected.msp', msp_file)\n",
-    "\n",
-    "    msp_file = './speclib/cptac2_mouse_hcd_selected.msp'"
+    "\n"
    ]
   },
   {
