--- a/deepMSim.ipynb
+++ b/deepMSim.ipynb
@@ -1648,7 +1648,15 @@
       "\n",
       "Epoch 8 Batch 0 Loss 0.2653 Accuracy 0.2702\n",
       "Epoch 8 Batch 50 Loss 0.2672 Accuracy 0.2720\n",
-      "Epoch 8 Batch 100 Loss 0.2655 Accuracy 0.2686\n"
+      "Epoch 8 Batch 100 Loss 0.2655 Accuracy 0.2686\n",
+      "Epoch 8 Batch 150 Loss 0.2663 Accuracy 0.2684\n",
+      "Epoch 8 Batch 200 Loss 0.2665 Accuracy 0.2684\n",
+      "Epoch 8 Batch 250 Loss 0.2671 Accuracy 0.2688\n",
+      "Epoch 8 Loss 0.2661 Accuracy 0.2690\n",
+      "Time taken for 1 epoch: 152.62317061424255 secs\n",
+      "\n",
+      "Epoch 9 Batch 0 Loss 0.2480 Accuracy 0.3036\n",
+      "Epoch 9 Batch 50 Loss 0.2591 Accuracy 0.2719\n"
      ]
     }
    ],
