[#1] Sorting of ions implemented.

--- a/deepMSim.ipynb
+++ b/deepMSim.ipynb
@@ -1656,7 +1656,15 @@
       "Time taken for 1 epoch: 152.62317061424255 secs\n",
       "\n",
       "Epoch 9 Batch 0 Loss 0.2480 Accuracy 0.3036\n",
-      "Epoch 9 Batch 50 Loss 0.2591 Accuracy 0.2719\n"
+      "Epoch 9 Batch 50 Loss 0.2591 Accuracy 0.2719\n",
+      "Epoch 9 Batch 100 Loss 0.2595 Accuracy 0.2719\n",
+      "Epoch 9 Batch 150 Loss 0.2606 Accuracy 0.2695\n",
+      "Epoch 9 Batch 200 Loss 0.2604 Accuracy 0.2693\n",
+      "Epoch 9 Batch 250 Loss 0.2620 Accuracy 0.2687\n",
+      "Epoch 9 Loss 0.2620 Accuracy 0.2688\n",
+      "Time taken for 1 epoch: 149.95293641090393 secs\n",
+      "\n",
+      "Epoch 10 Batch 0 Loss 0.2209 Accuracy 0.2832\n"
      ]
     }
    ],
