--- a/deepMSim.ipynb
+++ b/deepMSim.ipynb
@@ -331,22 +331,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-4f0cdb2d7f3a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Parse the MSP file and create a dataframe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparseMSPfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmsp_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdimm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msimm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-6-045471c96f6b>\u001b[0m in \u001b[0;36mparseMSPfile\u001b[0;34m(fname, dimm)\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m                 \u001b[0;31m# Extract label pattern\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m                 \u001b[0mlbls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr\"(?<!\\/)(?<![A-Z])(I[A-Z][A-Z](?![A-Z]){2}[\\/])\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m                 \u001b[0;31m# FIXME: To also find isotopes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/re.py\u001b[0m in \u001b[0;36mfindall\u001b[0;34m(pattern, string, flags)\u001b[0m\n\u001b[1;32m    221\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    222\u001b[0m     Empty matches are included in the result.\"\"\"\n\u001b[0;32m--> 223\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    224\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    225\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfinditer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/re.py\u001b[0m in \u001b[0;36m_compile\u001b[0;34m(pattern, flags)\u001b[0m\n\u001b[1;32m    274\u001b[0m         \u001b[0mflags\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    275\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 276\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_cache\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    277\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    278\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Clear the lists\n",
     "seq = []\n",
@@ -367,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,9 +362,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                  seq  z     E  \\\n",
+      "0           AAAAAAAAAAEEAAMQRDLLPPAGR  3  34.9   \n",
+      "1                          AAADDGEEPK  2  24.4   \n",
+      "2      AAAEEGCGVGVEDDRELEELLESALDDFDK  3  50.2   \n",
+      "3                      AAAEVNQEYGLDPK  2  31.0   \n",
+      "4                     AAAFEDQENETVVVK  2  38.7   \n",
+      "5                     AAAFEDQENETVVVK  2  40.1   \n",
+      "6                   AAAGELQEDSGLHVLAR  3  19.0   \n",
+      "7                      AAAITSDLLESLGR  2  29.0   \n",
+      "8                      AAAITSDLLESLGR  2  33.2   \n",
+      "9                      AAAITSDLLESLGR  2  44.0   \n",
+      "10                          AAALERMPR  2  21.2   \n",
+      "11                          AAATLMTER  2  22.6   \n",
+      "12              AAATQPDGKDTPDEPWAFPAR  3  34.3   \n",
+      "13  AACEQLHQQQQQQQEETTAATLLLQGEEEGEED  3  57.7   \n",
+      "14                            AACFQLK  2  19.6   \n",
+      "15                  AACLESAQEPAGAWSNK  2  41.9   \n",
+      "16                  AACLESAQEPAGAWSNK  2  43.5   \n",
+      "17                          AADAVEDLR  2  30.0   \n",
+      "19                           AADIPGLK  2  18.4   \n",
+      "20                 AADKDTCFSTEGPNLVTR  2  41.0   \n",
+      "\n",
+      "                                        ions  \n",
+      "0                                       [RJ]  \n",
+      "1                   [PA, KC, DA, EA, KD, KF]  \n",
+      "2                                         []  \n",
+      "3                                         []  \n",
+      "4                               [FA, KD, KF]  \n",
+      "5                           [FA, QD, KD, KF]  \n",
+      "6                                       [EA]  \n",
+      "7                                   [EA, RJ]  \n",
+      "8                                       [RJ]  \n",
+      "9                                       [RJ]  \n",
+      "10                                      [RJ]  \n",
+      "11              [RC, LC, TA, LA, MA, RI, RJ]  \n",
+      "12                              [WF, RJ, KF]  \n",
+      "13                                        []  \n",
+      "14  [LC, QC, KC, LA, QA, KA, FA, QD, KD, KF]  \n",
+      "15                      [QD, KD, WD, WA, KF]  \n",
+      "16                              [KD, WA, KF]  \n",
+      "17                                      [RJ]  \n",
+      "19              [PA, LC, IC, KC, LA, IA, KD]  \n",
+      "20                              [KD, RJ, KF]  \n"
+     ]
+    }
+   ],
    "source": [
     "# Construct a dataframe\n",
     "dataset = pd.DataFrame(list(zip(seq, Z, E, X)), columns=['seq', 'z', 'E', 'ions'])\n",
@@ -402,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,9 +528,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(b'3 A A L S G L L H R 14.4 -', shape=(), dtype=string)\n",
+      "tf.Tensor(b'LC LA HA HF RC RJ -', shape=(), dtype=string)\n",
+      "tf.Tensor(b'3 G A E T T L A L P M A S D L E L Y D V T E N S M R 40.2 -', shape=(), dtype=string)\n",
+      "tf.Tensor(b' -', shape=(), dtype=string)\n",
+      "tf.Tensor(b'3 K D K E E T I Q D T Q E E K 26.4 -', shape=(), dtype=string)\n",
+      "tf.Tensor(b'KD KF QD -', shape=(), dtype=string)\n",
+      "tf.Tensor(b'2 V T W A P P P S I E L T N L L V R 46.4 -', shape=(), dtype=string)\n",
+      "tf.Tensor(b'WE WH WA WF RJ -', shape=(), dtype=string)\n",
+      "tf.Tensor(b'2 G T V L L A D N V I V P G T P D F L A Y V R 54.6 -', shape=(), dtype=string)\n",
+      "tf.Tensor(b'RJ -', shape=(), dtype=string)\n",
+      "<class 'tensorflow.python.data.ops.dataset_ops.TensorSliceDataset'>\n"
+     ]
+    }
+   ],
    "source": [
     "cnt = 0\n",
     "for pep, ions in train_examples:\n",
@@ -517,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,9 +590,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenized string is [19, 9, 2, 9, 10, 12, 8, 2, 76, 150, 155, 6]\n",
+      "The original string: 3 P E P T I D E 64.3 -\n",
+      "FA KD RJ -\n",
+      "19 ----> 3 \n",
+      "9 ----> P \n",
+      "2 ----> E \n",
+      "9 ----> P \n",
+      "10 ----> T \n",
+      "12 ----> I \n",
+      "8 ----> D \n",
+      "2 ----> E \n",
+      "76 ----> 64\n",
+      "150 ----> .\n",
+      "155 ----> 3\n",
+      "6 ---->  -\n"
+     ]
+    }
+   ],
    "source": [
     "sample_string = '3 P E P T I D E 64.3 -'\n",
     "\n",
@@ -561,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,13 +1368,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_loss = tf.keras.metrics.Mean(name='train_loss')\n",
     "train_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(\n",
-    "    name='train_accuracy')"
+    "    name='train_accuracy')\n",
+    "\n",
+    "test_loss = tf.keras.metrics.Mean(name='test_loss')\n",
+    "test_accuracy = tf.keras.metrics.SparseCategoricalAccuracy(\n",
+    "    name='test_accuracy')"
    ]
   },
   {
@@ -1311,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,17 +1525,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Test Step"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,9 +1570,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 Batch 0 Loss 2.1672 Accuracy 0.0020\n",
+      "Epoch 1 Batch 50 Loss 1.9174 Accuracy 0.0394\n",
+      "Epoch 1 Batch 100 Loss 1.7143 Accuracy 0.0506\n",
+      "Epoch 1 Batch 150 Loss 1.6231 Accuracy 0.0561\n",
+      "Epoch 1 Batch 200 Loss 1.5332 Accuracy 0.0667\n",
+      "Epoch 1 Loss 1.5092 Accuracy 0.0695\n",
+      "Time taken for 1 epoch: 201.85675406455994 secs\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_loss' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-59e74d7ea365>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m   \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'Time taken for 1 epoch: {} secs\\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m   \u001b[0mtest_loss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_states\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m   \u001b[0mtest_accuracy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset_states\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'test_loss' is not defined"
+     ]
+    }
+   ],
    "source": [
     "for epoch in range(EPOCHS):\n",
     "  start = time.time()\n",
